ch02/sample-exercises/02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: allowed
spec:
  containers:
  - image: nginx
    name: allowed
    # command:
    # - /bin/sh
    # - -c
    # - >
    #   sleep 3600
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
