ch02/sample-exercises/01-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector: {} # allow egress to all namespaces
      ports:
          - protocol: TCP
            port: 53
          - protocol: UDP
            port: 53
